--- a/app/globals.css
+++ b/app/globals.css
@@ -24,9 +24,17 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
-/* Add this to your globals.css */
+
 .leaflet-container {
   z-index: 1;
   width: 100%;
   height: 100%;
+}
+
+.leaflet-tooltip {
+  background-color: white;
+  border: 2px solid #002d72;
+  border-radius: 4px;
+  padding: 2px 4px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
 }
